# tensorflow_c_examples

./: .gitignore  CMakeLists.txt
include/: Network.hpp
src/: batch_interface_object.cpp
test/: CMakeLists.txt  test_detection.cpp
